[project]
name = "processieve"
version = "0.1.0"
description = "Agile ideation and iteration and instantiation on business processes."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "Marc-Antoine Parent", email = "maparent@conversence.com" },
  { name = "Eden Redman", email = "eden@neuralberta.tech" },
  { name = "Dave Lazar", email = "dlazar@resistorsoftware.com" },
]
dependencies = [
  "cohere",
  "dspy",
  "fastapi",
  "lightrag-hku",
  "linkml_store",
  "linkml",
  "matplotlib",
  "neo4j",
  "nicegui",
  "nano_vectordb",
  "networkx",
  "pipmaster",
  "py2neo",
]

[project.optional-dependencies]
test = ["asgi-lifespan", "pytest-asyncio", "pytest"]
docs = ["Sphinx"]
dev = ["ipython"]
